--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="i-phone1314.css" media="none" id="mobile-css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Onest:wght@400;500;700&display=swap"
@@ -133,11 +134,8 @@
                 <p class="simplifying-outsourcing">
                   <b>Support with Agility</b>
                 </p>
-                <p class="consulting-redefined">Our support model is built</p>
-                <p class="consulting-redefined">
-                  on flexibility, offering tailored solutions that keep your
-                  operations smooth and adaptable.
-                </p>
+                <p class="consulting-redefined">Our support model is built on flexibility, offering tailored solutions that keep your
+                  operations smooth and adaptable.</p>
                 <p class="bridging-systems">
                   Whether it’s ongoing maintenance or critical support, we’re
                   there where and when you need us.
@@ -388,6 +386,21 @@
           window.open("https://www.onfolk.com/demo");
         });
       }
+
+      function loadMobileCSS() {
+          var mobileCSS = document.getElementById('mobile-css');
+          if (window.innerWidth <= 768) {  // Можете изменить это значение в соответствии с вашими потребностями
+              mobileCSS.media = 'all';
+          } else {
+              mobileCSS.media = 'none';
+          }
+      }
+
+      // Вызываем функцию при загрузке страницы
+      window.addEventListener('load', loadMobileCSS);
+
+      // Вызываем функцию при изменении размера окна
+      window.addEventListener('resize', loadMobileCSS);
     </script>
   </body>
 </html>
