--- a/clean.html
+++ b/clean.html
@@ -80,12 +80,16 @@
     
     <section class="clients-section">
         <h2>Our clients</h2>
-        <div class="clients-container">
-            <img class="ufg-icon" alt="UFG" src="./public/ufg@2x.png" />
-            <img class="mcrsft-icon" alt="Microsoft" src="./public/mcrsft@2x.png" />
-            <img class="hellenic-icon" alt="Hellenic" src="./public/hellenic@2x.png" />
-            <img class="mp-logo-icon" alt="MP" src="./public/mp-logo@2x.png" />
-            <img class="deutsche-icon" loading="lazy" alt="Deutsche" src="./public/deutsche@2x.png" />
+        <div class="clients-container first-row">
+            <img src="./public/ufg@2x.png" alt="UFG" class="ufg-icon">
+            <img src="./public/mcrsft@2x.png" alt="Microsoft" class="mcrsft-icon">
+            <img src="./public/hellenic@2x.png" alt="Hellenic" class="hellenic-icon">
+        </div>
+    
+        <!-- Второй грид с двумя ячейками -->
+        <div class="clients-container second-row">
+            <img src="./public/mp-logo@2x.png" alt="MP" class="mp-logo-icon">
+            <img src="./public/deutsche@2x.png" alt="Deutsche" class="deutsche-icon" loading="lazy">
         </div>
     </section>
 
